--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <script src="lib/jquery-1.8.2.min.js"></script>
 <script src="js/storage/memory-store.js"></script>
+<script src="js/HomeView.js"></script>
 <script src="js/main.js"></script>
 <script src="phonegap.js"></script>
 <script src="lib/handlebars.js"></script>
+
 </body>
 </html>
